--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,6 +1,5 @@
 @import "vars";
 
 header {
-	background-color: $bgcolour;
-	border-bottom: 1px solid $textcolour;
+	border-bottom: 1px solid $linecolour;
 }
