--- a/src/index.njk
+++ b/src/index.njk
@@ -4,9 +4,20 @@ title: I Like Guitars – Challenges
 ---
 
 <section class="latest">
-  <h2>Latest challenge</h2>
-
 {% markdown %}
-1. March 2025: Joe Satriani's "Circles"
+## Latest challenge
+
+* March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
+{% endmarkdown %}
+</section>
+
+<section class="previous">
+{% markdown %}
+## Previous challenges
+
+* MMMM YYYY: ["Track name" by Artist](/devnull)
+* MMMM YYYY: ["Track name" by Artist](/devnull)
+* MMMM YYYY: ["Track name" by Artist](/devnull)
+* MMMM YYYY: ["Track name" by Artist](/devnull)
 {% endmarkdown %}
 </section>
