bit more layout

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,5 +1,7 @@
 $textcolour: #000;
+$linkcolour: #333;
 $bgcolour: #fff;
 $linecolour: #000;
 $main-font: OswaldLight, sans-serif;
 $headline-font: Cormorant, serif;
+$side-padding: 30px;
