--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,5 +1,5 @@
 <header>
 	<div class="header-inner">
-		<h1>{{ siteTitle }}</h1>
+		<h1><span>{{ siteTitle }}</span> by the Fiasco Bros. <abbr title="Established">EST</abbr> 2025.</h1>
 	</div>
 </header>
