--- a/src/_layouts/main.njk
+++ b/src/_layouts/main.njk
@@ -14,7 +14,7 @@
 	<link rel="shortcut icon" href="/public/images/bill-favicon.png" type="image/x-icon"> #}
 </head>
 
-<body>
+<body class="{{ bodyclass }}">
 
 	{{ content | safe }}
 
