--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -34,3 +34,11 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+// Rye
+@font-face {
+	font-family: Rye;
+	src: url("/public/fonts/Rye-Regular.woff2") format("woff2");
+	font-weight: normal;
+	font-style: normal;
+}
