--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -4,4 +4,5 @@ $bgcolour: #fff;
 $linecolour: #000;
 $main-font: OswaldLight, sans-serif;
 $headline-font: Cormorant, serif;
+$spanfont: Rye, serif;
 $side-padding: 30px;
