--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -1,6 +1,8 @@
 main {
+	width: 100%;
 	max-width: 1200px;
 	margin: 2rem auto;
+	flex: 1 1 auto;
 }
 
 section {
@@ -9,6 +11,8 @@ section {
 }
 
 footer {
+	width: 100%;
 	max-width: 1200px;
 	margin: auto;
+	flex: 0 1 auto;
 }
