--- a/src/assets/styles/_lists.scss
+++ b/src/assets/styles/_lists.scss
@@ -1,3 +1,22 @@
-li {
-	margin-left: 30px;
+.latest ul,
+.previous ul {
+	list-style: none;
+
+	li::before {
+		content: "";
+		background-image: url("/public/images/point.png");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: left bottom;
+		display: inline-block;
+		width: 60px;
+		height: 25px;
+		position: relative;
+		top: 0.2rem;
+		margin-right: 0.2rem;
+	}
 }
+
+// li {
+// 	margin-left: 30px;
+// }
