--- a/src/previous.njk
+++ b/src/previous.njk
@@ -1,16 +1,8 @@
 ---
 layout: home.njk
-bodyclass: home
+bodyclass: page
 ---
 
-<section class="latest">
-{% markdown %}
-## Latest challenge
-
-* March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
-{% endmarkdown %}
-</section>
-{#
 <section class="previous">
 {% markdown %}
 ## Previous challenges
@@ -20,4 +12,4 @@ bodyclass: home
 * MMMM YYYY: ["Track name" by Artist](/devnull)
 * MMMM YYYY: ["Track name" by Artist](/devnull)
 {% endmarkdown %}
-</section> #}
+</section>
