--- a/src/assets/styles/_footnotes.scss
+++ b/src/assets/styles/_footnotes.scss
@@ -1,6 +1,7 @@
 hr.footnotes-sep {
 	border: none;
-	border-bottom: 1px dotted $linecolour;
+
+	// border-bottom: 1px dotted $linecolour;
 }
 
 section.footnotes {
