--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,6 +1,6 @@
 $textcolour: #000;
 $linkcolour: #333;
-$bgcolour: #fff;
+$bgcolour: #fafafa;
 $linecolour: #000;
 $main-font: OswaldLight, sans-serif;
 $headline-font: Cormorant, serif;
