--- a/src/previous.njk
+++ b/src/previous.njk
@@ -8,8 +8,8 @@ bodyclass: page
 ## Previous challenges
 
 * MMMM YYYY: ["Track name" by Artist](/devnull)
-* MMMM YYYY: ["Track name" by Artist](/devnull)
-* MMMM YYYY: ["Track name" by Artist](/devnull)
+* MMMM YYYY: [Solo section from "Track name" by Artist](/devnull)
+* MMMM YYYY: [Intro to "Track name" by Artist](/devnull)
 * MMMM YYYY: ["Track name" by Artist](/devnull)
 {% endmarkdown %}
 </section>
