--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -25,7 +25,7 @@ legend,
 label,
 input,
 textarea {
-	font-size: 1.5rem;
+	font-size: 1.75rem;
 }
 
 h1,
@@ -36,12 +36,13 @@ h5,
 h6 {
 	font-family: $headline-font;
 	font-weight: normal;
-	margin-bottom: 1rem;
+	margin-bottom: 1em;
 	margin-inline: $side-padding;
 }
 
 h1 {
 	font-style: italic;
+	margin-bottom: 0.5rem;
 }
 
 h1 span {
@@ -57,12 +58,19 @@ h1 abbr {
 }
 
 h2 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-variant-caps: small-caps;
 }
 
-section p {
-	margin-inline: $side-padding;
+section {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		margin-inline: 0;
+	}
 }
 
 body.home {
