--- a/src/_layouts/main.njk
+++ b/src/_layouts/main.njk
@@ -10,8 +10,8 @@
 
 	<link rel="stylesheet" type="text/css" href="/public/css/style.css">
 
-	{# <link rel="icon" href="/public/images/bill-favicon.png" type="image/x-icon">
-	<link rel="shortcut icon" href="/public/images/bill-favicon.png" type="image/x-icon"> #}
+	<link rel="icon" href="/public/images/favicon/apple-touch-icon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/public/images/favicon/apple-touch-icon.png" type="image/x-icon">
 </head>
 
 <body class="{{ bodyclass }}">
