--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -45,11 +45,18 @@ h1 {
 	margin-bottom: 0.5rem;
 }
 
-h1 span {
+h1 a {
 	font-family: $spanfont;
 	text-transform: uppercase;
 	font-size: 2rem;
 	font-style: normal;
+	text-decoration: none;
+	color: $textcolour;
+
+	&:hover {
+		background-color: transparent;
+		color: $textcolour;
+	}
 }
 
 h1 abbr {
@@ -74,7 +81,7 @@ section {
 }
 
 body.home {
-	h1 span {
+	h1 a {
 		font-size: 4rem;
 	}
 }
