--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -2,7 +2,9 @@ $textcolour: #000;
 $linkcolour: #333;
 $bgcolour: #fafafa;
 $linecolour: #000;
-$main-font: OswaldLight, sans-serif;
-$headline-font: Cormorant, serif;
+$main-font: Cormorant, serif;
+$headline-font: $main-font;
+$nav-font: OswaldLight, sans-serif;
+$link-font: $nav-font;
 $spanfont: Rye, serif;
 $side-padding: 30px;
