--- a/src/assets/styles/_nav.scss
+++ b/src/assets/styles/_nav.scss
@@ -15,6 +15,13 @@ nav {
 		li {
 			margin: 0;
 		}
+
+		li + li {
+			&::before {
+				content: "•";
+				padding-right: 1rem;
+			}
+		}
 	}
 
 	a {
