--- a/src/index.njk
+++ b/src/index.njk
@@ -8,16 +8,7 @@ bodyclass: home
 ## Latest challenge
 
 * March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
+
+Can our heroes remember (or learn) how to play "Circles" by Joe Satriani all the way through? Let's find out.
 {% endmarkdown %}
 </section>
-{#
-<section class="previous">
-{% markdown %}
-## Previous challenges
-
-* MMMM YYYY: ["Track name" by Artist](/devnull)
-* MMMM YYYY: ["Track name" by Artist](/devnull)
-* MMMM YYYY: ["Track name" by Artist](/devnull)
-* MMMM YYYY: ["Track name" by Artist](/devnull)
-{% endmarkdown %}
-</section> #}
