--- a/src/index.njk
+++ b/src/index.njk
@@ -9,6 +9,6 @@ bodyclass: home
 
 * March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
 
-Can our heroes remember (or learn) how to play "Circles" by Joe Satriani all the way through? Let's find out.
+Can our heroes remember (or learn) how to play "Circles" by Joe Satriani all the way through? When one of them has a gammy finger and the other has a broken A/B box? Let's find out.
 {% endmarkdown %}
 </section>
