--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -5,6 +5,7 @@
 @import "lists";
 @import "header";
 @import "nav";
+@import "challenge";
 @import "footnotes";
 @import "footer";
 @import "links";
