--- a/src/challenges/2025-03-circles.njk
+++ b/src/challenges/2025-03-circles.njk
@@ -20,11 +20,11 @@ The challenge: to record a plausible playthrough of "[Circles](https://song.link
 {% markdown %}
 I think this was the third try over the course of a week. The first time I thought I'd pretty much nailed it on the first take, but wasn't 100% happy with one bit.
 
-Then on the second go I rushed the clean parts and they sounded out of time. Third time's the charm, although this did take about 10 takes to get all the way through and I still missed the volume knob coming out of the solo section.
+Then on the second go I rushed the clean parts and they sounded out of time. Third time's the charm, although this time I did need about 10 takes to get all the way through and I still missed the volume knob coming out of the solo section.
 
 Ah well. I'm pretty happy with it.
 
-The clean tone is from Neural DSP Archetype: Cory Wong and the distortion tone is from Archetype: Rabea, and I have my Morley Bad Horsie wha on the distortion channel. I had to buy a new A/B box to do this video as my 30-year old one broke after the second attempt.
+The clean tone is from Neural DSP's [Archetype: Cory Wong](https://neuraldsp.com/plugins/archetype-cory-wong) and the distortion tone is from [Archetype: Rabea](https://neuraldsp.com/plugins/archetype-rabea), and I have my Morley Bad Horsie wha on the distortion channel. I had to buy a new A/B box to do this video as my 30-year old one broke after the second attempt.
 
 C'est la vie, innit?
 {% endmarkdown %}
@@ -33,15 +33,11 @@ C'est la vie, innit?
 
   <div class="entry">
     <h3>Player 2: Pearl Fiasco</h3>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/q_YQsqzXlk8?si=pakvR5aNd6U6raFz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DNVp63MhMOc?si=z7-9JxnALlEhia5P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>PF says:</h3>
     <blockquote>
 {% markdown %}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel enim pharetra, elementum nulla a, viverra ex. Curabitur ultricies ipsum ac ex rutrum, vitae ultrices lacus luctus. Morbi elementum elementum sagittis. Suspendisse ut scelerisque ex, eget finibus dolor. Curabitur felis tortor, feugiat vel est nec, varius elementum mi.
-
-Praesent urna dui, tempor in interdum eu, tempor et mauris. In vehicula vel nisl porttitor ullamcorper. Curabitur ultricies sapien at felis vulputate, quis molestie elit vehicula. Nullam molestie, risus vitae lacinia vehicula, enim ligula posuere lectus, at rhoncus augue massa vitae tortor.
-
-Donec non orci nulla. Proin non enim justo. Integer libero mi, placerat id maximus a, vehicula sit amet odio. Donec pharetra eget metus id efficitur. Nullam lobortis commodo mauris, nec placerat nibh euismod eget. Integer accumsan neque id erat maximus, at condimentum diam interdum.
+Using a Les Paul, am I'm sure Joe would have if he'd had one available 🙂
 {% endmarkdown %}
     </blockquote>
   </div>
