hide previous challenges for now

--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ bodyclass: home
 
 <section class="latest">
 {% markdown %}
-## Latest challenge
+## First challenge
 
 * March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
 
