--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,5 +1,5 @@
 <header>
 	<div class="header-inner">
-		<h1><a href="/">{{ siteTitle }}</a> by the Fiasco Bros. <abbr title="Established">EST</abbr> 1991.</h1>
+		<h1><a href="/">{{ siteTitle }}</a> <span>by the Fiasco Bros. <abbr title="Established">EST</abbr> 1991.</span></h1>
 	</div>
 </header>
