--- a/src/assets/styles/_challenge.scss
+++ b/src/assets/styles/_challenge.scss
@@ -2,8 +2,34 @@
 
 .challenge-entries {
 	display: flex;
-	flex-direction: row;
-	gap: 1rem;
+	flex-direction: column;
+	gap: 3rem;
+	justify-content: space-between;
+
+	@media (width >= 1000px) {
+		flex-direction: row;
+		gap: 1rem;
+	}
+}
+
+.entry {
+	flex: 0 1 560px;
+}
+
+.entry h3 {
+	margin-bottom: 0.25rem;
+}
+
+@media (width < 1000px) {
+	.entry + .entry {
+		border-top: 1px dotted #666;
+		padding-top: 2rem;
+	}
+}
+
+iframe {
+	width: 100%;
+	aspect-ratio: 560 / 315;
 }
 
 iframe + h3 {
