--- a/src/challenges/2025-03-circles.njk
+++ b/src/challenges/2025-03-circles.njk
@@ -14,7 +14,7 @@ The challenge: to record a plausible playthrough of "[Circles](https://song.link
 <section class="challenge challenge-entries">
   <div class="entry">
     <h3>Player 1: Cussons Fiasco</h3>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qlw10VxdcBE?si=Oa5G5dTBe8NA1BWL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/Qlw10VxdcBE?si=Oa5G5dTBe8NA1BWL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>CF says:</h3>
     <blockquote>
 {% markdown %}
@@ -33,7 +33,7 @@ C'est la vie, innit?
 
   <div class="entry">
     <h3>Player 2: Pearl Fiasco</h3>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DNVp63MhMOc?si=z7-9JxnALlEhia5P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/DNVp63MhMOc?si=z7-9JxnALlEhia5P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>PF says:</h3>
     <blockquote>
 {% markdown %}
