add welcome to front page

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,14 @@ layout: home.njk
 bodyclass: home
 ---
 
+<section class="welcome">
+{% markdown %}
+## Well, hello there
+
+Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing guitarist buddies come up with guitar challenges for each other to keep themselves entertained, engaged and alive.
+{% endmarkdown %}
+</section>
+
 <section class="latest">
 {% markdown %}
 ## First challenge
