--- a/src/challenges/2025-03-circles.njk
+++ b/src/challenges/2025-03-circles.njk
@@ -37,7 +37,7 @@ C'est la vie, innit?
     <h3>PF says:</h3>
     <blockquote>
 {% markdown %}
-Using a Les Paul, am I'm sure Joe would have if he'd had one available 🙂
+Using a Les Paul, as I'm sure Joe would have if he'd had one available 🙂
 {% endmarkdown %}
     </blockquote>
   </div>
