typography tweak to lists

--- a/src/challenges/2025-03-circles.njk
+++ b/src/challenges/2025-03-circles.njk
@@ -7,7 +7,7 @@ bodyclass: challenge
 {% markdown %}
 ## March 2025: "Circles" by Joe Satriani
 
-The challenge: to record a plausible playthrough of "[Circles](https://song.link/gb/i/405602068)" from start to finish.
+* **The challenge**: to record a plausible playthrough of "[Circles](https://song.link/gb/i/405602068)" from start to finish.
 {% endmarkdown %}
 </section>
 
