--- a/src/challenges/2025-03-circles.njk
+++ b/src/challenges/2025-03-circles.njk
@@ -20,7 +20,7 @@ bodyclass: challenge
 {% markdown %}
 I think this was the third try over the course of a week. The first time I thought I'd pretty much nailed it on the first take, but wasn't 100% happy with one bit.
 
-Then on the second go I rushed the clean parts and they sounded out of time. Third time's the charm, although this time I did need about 10 takes to get all the way through and I still missed the volume knob coming out of the solo section.
+Then on the second go I rushed the clean parts and they sounded out of time. Third time's the charm, although even then I did need about 10 takes to get all the way through and I still missed the volume knob coming out of the solo section.
 
 Ah well. I'm pretty happy with it.
 
