--- a/src/assets/styles/_challenge.scss
+++ b/src/assets/styles/_challenge.scss
@@ -14,6 +14,14 @@
 
 .entry {
 	flex: 0 1 560px;
+
+	@media (width < 600px) {
+		margin-inline: -10px;
+
+		& > *:not(iframe) {
+			margin-inline: 10px;
+		}
+	}
 }
 
 .entry h3 {
