--- a/src/assets/styles/_footnotes.scss
+++ b/src/assets/styles/_footnotes.scss
@@ -4,8 +4,12 @@ hr.footnotes-sep {
 
 section.footnotes {
 	border: none;
-	padding-inline: $side-padding;
 	font-size: 1.2rem;
+	padding-inline: 10px;
+
+	@media (width > 600px) {
+		padding-inline: $side-padding;
+	}
 
 	li {
 		margin-left: 15px;
