--- a/src/assets/styles/_nav.scss
+++ b/src/assets/styles/_nav.scss
@@ -6,11 +6,16 @@ nav {
 
 	ul {
 		list-style: none;
-		margin: 0 30px;
+		margin-block: 0;
+		margin-inline: 10px;
 		display: flex;
 		flex-direction: row;
 		gap: 1rem;
 		justify-content: flex-end;
+
+		@media (width > 600px) {
+			margin-inline: $side-padding;
+		}
 
 		li {
 			margin: 0;
