--- a/src/index.njk
+++ b/src/index.njk
@@ -7,15 +7,27 @@ bodyclass: home
 {% markdown %}
 ## Well, hello there
 
-Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing guitarist buddies come up with guitar challenges for each other to keep themselves entertained, engaged and alive.
+Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing guitarist buddies come up with guitar challenges for each other to keep themselves entertained, engaged and alive.{.lede}
 {% endmarkdown %}
 </section>
 
 <section class="latest">
 {% markdown %}
-## First challenge
+## Latest challenge
 
-* March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-circles)
+* April 2025: [Steve Vai's solo from "Ladies' Nite in Buffalo?" by David Lee Roth](/challenges/2025-04-07-ladies-nite-in-buffalo)
+
+---{.dots}
+
+Diamond Dave's debut solo album is laden with crackling guitar work supplied by none other than Steve Vai. Can the Brothers navigate one of the most melodic and memorable solos on the album?
+{% endmarkdown %}
+</section>
+
+<section class="previous">
+{% markdown %}
+## Previous challenge
+
+* March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-27-circles)
 
 ---{.dots}
 
