changed comments domain

--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -39,14 +39,14 @@ Lorem
   <h2>Comments</h2>
   <!-- Add a comment form -->
 
-  <script type="module" src="https://corsproxy.io/?url=http://51.155.197.58:7777/challenge/meh.esm.js"></script>
+  <script type="module" src="http://saffronmurray.com:7777/challenge/meh.esm.js"></script>
 
   <meh-form>
       <meh-mastodon></meh-mastodon>
       <meh-login></meh-login>
   </meh-form>
   <meh-comments
-    backend="http://51.155.197.58:7777/"
+    backend="http://saffronmurray.com:7777/"
     site="challenge"
     post="/challenges/dummy-challenge">
   </meh-comments>
