--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -44,10 +44,5 @@ Lorem
   <meh-form site="challenge">
     <meh-login site="challenge"></meh-login>
   </meh-form>
-  <meh-comments
-    backend="https://saffronmurray.com/"
-    site="challenge"
-    post="/challenges/dummy-challenge"
-    >
-  </meh-comments>
+  <meh-comments site="challenge"></meh-comments>
 </section>
