--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -36,7 +36,7 @@ Lorem
 </section>
 
 <section class="challenge-comments">
-  <h2>Comments</h2>
+  <h2>Audience Participation</h2>
   <!-- Add a comment form -->
 
   <script type="module" src="https://saffronmurray.com/meh/meh.esm.js"></script>
