more meh styling

--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -41,8 +41,8 @@ Lorem
 
   <script type="module" src="https://saffronmurray.com/meh/meh.esm.js"></script>
 
-  <meh-form site="challenge" externalStyles="https://challenge.clivemurray.com/public/css/meh.css">
-    <meh-login site="challenge" externalStyles="https://challenge.clivemurray.com/public/css/meh.css"></meh-login>
+  <meh-form site="challenge" externalStyles="/public/css/meh.css">
+    <meh-login site="challenge" externalStyles="/public/css/meh.css"></meh-login>
   </meh-form>
-  <meh-comments site="challenge" externalStyles="https://challenge.clivemurray.com/public/css/meh.css"></meh-comments>
+  <meh-comments site="challenge" externalStyles="/public/css/meh.css"></meh-comments>
 </section>
