more meh styling

--- a/src/assets/styles/meh/_form.scss
+++ b/src/assets/styles/meh/_form.scss
@@ -1,7 +1,5 @@
-.meh-form-container {
-	input[type="text"],
-	textarea {
-		border: none;
-		border-bottom: 1px solid var(--meh-default-foreground);
-	}
+input[type="text"],
+textarea {
+	border: none !important;
+	border-bottom: 1px solid var(--meh-default-foreground) !important;
 }
