more meh styling

--- a/src/assets/styles/meh/_form.scss
+++ b/src/assets/styles/meh/_form.scss
@@ -1,5 +1,5 @@
 input[type="text"],
 textarea {
-	border: none !important;
-	border-bottom: 1px solid var(--meh-default-foreground) !important;
+	border: none;
+	border-bottom: 1px solid var(--meh-default-foreground);
 }
