--- a/src/assets/styles/meh/_form.scss
+++ b/src/assets/styles/meh/_form.scss
@@ -7,4 +7,10 @@
 		border-bottom: 1px solid var(--meh-default-foreground);
 		background-color: #f0f0f0;
 	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="url"] {
+		font-family: Cormorant, serif;
+	}
 }
