more meh styling

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -42,3 +42,11 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+// MonaspaceXenon
+@font-face {
+	font-family: MonaspaceXenon;
+	src: url("/public/fonts/MonaspaceXenonVarVF.woff2") format("woff2");
+	font-weight: normal;
+	font-style: normal;
+}
