--- a/src/assets/styles/meh/_form.scss
+++ b/src/assets/styles/meh/_form.scss
@@ -19,4 +19,9 @@
 		font-family: Cormorant, serif;
 		font-size: 1.25rem;
 	}
+
+	textarea {
+		font-family: MonaspaceXenon, monospace;
+		font-size: 1.25em;
+	}
 }
