--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -35,7 +35,7 @@ Lorem
   </div>
 </section>
 
-<section class="challenge-comments">
+<section class="challenge-comments js-only">
   <h2>Audience Participation</h2>
   <!-- Add a comment form -->
 
