--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -35,14 +35,4 @@ Lorem
   </div>
 </section>
 
-<section class="challenge-comments js-only">
-  <h2>Audience Participation</h2>
-  <!-- Add a comment form -->
-
-  <script type="module" src="https://saffronmurray.com/meh/meh.esm.js"></script>
-
-  <meh-form site="challenge" external-styles="/public/css/meh.css">
-    <meh-login site="challenge" external-styles="/public/css/meh.css"></meh-login>
-  </meh-form>
-  <meh-comments site="challenge" external-styles="/public/css/meh.css"></meh-comments>
-</section>
+{% include "comments.njk" %}
