more meh styling

--- a/src/challenges/dummy-challenge.njk
+++ b/src/challenges/dummy-challenge.njk
@@ -1,13 +1,12 @@
 ---
-layout: home.njk
-bodyclass: challenge
+layout: challenge.njk
 ---
 
 <section class="challenge challenge-intro">
 {% markdown %}
-## Month YEAR: "Song" by Artist
+## April 2025: Steve Vai’s solo from “Ladies’ Nite in Buffalo?” by David Lee Roth
 
-* **The challenge**: Lorem ipsum intro.
+* **The challenge**: "[Ladies' Nite in Buffalo?](https://song.link/gb/i/432798272)" from David Lee Roth's 1986 album **Eat 'Em and Smile** has a slow sultry groove and a fantastically slinky solo played by—of course—Steve Vai. Record a decent version of it start to finish, no comps, no filter.
 {% endmarkdown %}
 </section>
 
@@ -34,5 +33,3 @@ Lorem
     </blockquote>
   </div>
 </section>
-
-{% include "comments.njk" %}
