--- a/src/assets/styles/meh/_comments.scss
+++ b/src/assets/styles/meh/_comments.scss
@@ -4,6 +4,12 @@
 
 		& > * {
 			font-size: 1.25rem;
+			display: inline-block;
+			margin-right: 5px;
+
+			&:last-child {
+				margin-right: 0;
+			}
 		}
 	}
 
