add strange challenge, reinstate previous page

--- a/src/challenges/2025-04-14-strange.njk
+++ b/src/challenges/2025-04-14-strange.njk
@@ -5,9 +5,9 @@ bodyclass: challenge
 
 <section class="challenge challenge-intro">
 {% markdown %}
-## April 2025: Steve Vai’s solo from “Ladies’ Nite in Buffalo?” by David Lee Roth
+## April 2025: The solo section from "Strange" by Joe Satriani
 
-* **The challenge**: "[Ladies' Nite in Buffalo?](https://song.link/gb/i/432798272)" from David Lee Roth's 1986 album **Eat 'Em and Smile** has a slow sultry groove and a fantastically slinky solo played by—of course—Steve Vai. Record a decent version of it start to finish, no comps, no filter.
+* **The challenge**: There are two solos stacked back-to-back in the middle of Satch's "[Strange](https://song.link/gb/i/407604565)". You must play each solo end-to-end with no comps, but it **is** OK if they are from separate takes.
 {% endmarkdown %}
 </section>
 
