--- a/src/index.njk
+++ b/src/index.njk
@@ -15,14 +15,27 @@ Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing gu
 {% markdown %}
 ## Latest challenge
 
+* April 2025: [The solo section from "Strange" by Joe Satriani](/challenges/2025-04-14-strange)
+
+---{.dots}
+
+Satch's 1989 album "Flying in a Blue Dream" was his first which mixed instrumentals with vocal rock tracks, such as "Strange". Don't worry, the Brothers aren't going to be singing at you, but can they wrap their mitts around the solo section?
+{% endmarkdown %}
+</section>
+
+<section class="previous">
+{% markdown %}
+## Previous challenge
+
 * April 2025: [Steve Vai's solo from "Ladies' Nite in Buffalo?" by David Lee Roth](/challenges/2025-04-07-ladies-nite-in-buffalo)
 
 ---{.dots}
 
-Diamond Dave's debut solo album is laden with crackling guitar work supplied by none other than Steve Vai. Can the Brothers navigate one of the most melodic and memorable solos on the album?
+Diamond Dave's debut solo album is laden with crackling guitar work supplied by none other than Steve Vai. Can the Brothers navigate one of the most melodic and memorable solos on the record?
 {% endmarkdown %}
 </section>
 
+{#
 <section class="previous">
 {% markdown %}
 ## Previous challenge
@@ -33,4 +46,4 @@ Diamond Dave's debut solo album is laden with crackling guitar work supplied by 
 
 Can our heroes remember (or learn) how to play "Circles" by Joe Satriani all the way through? When one of them has a gammy finger and the other has a broken A/B box? Let's find out.
 {% endmarkdown %}
-</section>
+</section> #}
