--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -22,6 +22,11 @@ hr.dots {
 	padding-bottom: 2rem;
 }
 
+hr.spacer {
+	border: none;
+	padding-bottom: 2rem;
+}
+
 footer {
 	width: 100%;
 	max-width: 1200px;
