--- a/src/assets/styles/_nav.scss
+++ b/src/assets/styles/_nav.scss
@@ -9,7 +9,7 @@ nav {
 		margin-block: 0;
 		margin-inline: 10px;
 		display: flex;
-		flex-direction: row;
+		flex-flow: row wrap;
 		gap: 1rem;
 		justify-content: flex-end;
 
