--- a/src/challenges/2025-04-14-strange.njk
+++ b/src/challenges/2025-04-14-strange.njk
@@ -1,40 +1,27 @@
 ---
 layout: challenge.njk
 bodyclass: challenge
+nocomments: true
 ---
 
 <section class="challenge challenge-intro">
 {% markdown %}
 ## April 2025: The solo section from "Strange" by Joe Satriani
 
-* **The challenge**: There are two solos stacked back-to-back in the middle of Satch's "[Strange](https://song.link/gb/i/407604565)". You must play each solo end-to-end with no comps, but it **is** OK if they are from separate takes.
+* **The challenge**: There are two solos stacked back-to-back in the middle of Satch's "[Strange](https://song.link/gb/i/407604565)". Our heroes must play each solo end-to-end with no stitching, but it **is** OK if they are from separate takes.
 {% endmarkdown %}
 </section>
 
 <section class="challenge challenge-entries">
 
-  <div class="entry">
-    <h3>Player 1: Pearl Fiasco</h3>
-    <iframe src="https://www.youtube-nocookie.com/embed/FDtZo2E63ao?si=mWnGo5Z4qA39mDXd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>PF says:</h3>
-    <blockquote>
-{% markdown %}
-Eat 'em And Smile is probably my favourite Vai, and this is one of his best. I've been playing it (wrong) for decades, so finally decided to sit down and get it as close as I can.
-{% endmarkdown %}
-    </blockquote>
+  <div class="entry entry-awaiting">
+    <h3>Player 1</h3>
+    <p>awaiting entry</p>
   </div>
 
-  <div class="entry">
-    <h3>Player 2: Cussons Fiasco</h3>
-    <iframe src="https://www.youtube-nocookie.com/embed/H00BW8Ad1FY?si=U1CCdLfCFzu2_yUJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>CF says:</h3>
-    <blockquote>
-{% markdown %}
-This one took looooooads of takes to get even this close. For some reason the fast hammer-on section starting at 0:23 just wouldn't come together for me. I'm too out of practice.
-
-The tone is coming from Neural DSP's awesome [Soldano SLO-100 X](https://neuraldsp.com/plugins/soldano-slo-100) plugin, and the guitar is of course my original 1987 [Ibanez JEM777LNG](https://ibanez.fandom.com/wiki/JEM777).
-{% endmarkdown %}
-    </blockquote>
+  <div class="entry entry-awaiting">
+    <h3>Player 2</h3>
+    <p>awaiting entry</p>
   </div>
 
 </section>
