--- a/src/challenges/2025-03-27-circles.njk
+++ b/src/challenges/2025-03-27-circles.njk
@@ -12,7 +12,7 @@ bodyclass: challenge
 </section>
 
 <section class="challenge challenge-entries">
-  <div class="entry">
+  <div class="entry entry-cf">
     <h3>Player 1: Cussons Fiasco</h3>
     <iframe src="https://www.youtube-nocookie.com/embed/Qlw10VxdcBE?si=Oa5G5dTBe8NA1BWL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>CF says:</h3>
@@ -31,7 +31,7 @@ C'est la vie, innit?
     </blockquote>
   </div>
 
-  <div class="entry">
+  <div class="entry entry-pf">
     <h3>Player 2: Pearl Fiasco</h3>
     <iframe src="https://www.youtube-nocookie.com/embed/DNVp63MhMOc?si=z7-9JxnALlEhia5P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>PF says:</h3>
