--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@ Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing gu
 
 ---{.dots}
 
-Satch's 1989 album "Flying in a Blue Dream" was his first which mixed instrumentals with vocal rock tracks, such as "Strange". Don't worry, the Brothers aren't going to be singing at you, but can they wrap their mitts around the solo section?
+Satch's 1989 album **Flying in a Blue Dream** was his first which mixed instrumentals with vocal rock tracks, such as "Strange". Don't worry, the Brothers aren't going to be singing at you, but can they wrap their mitts around the solo section?
 {% endmarkdown %}
 </section>
 
