--- a/src/challenges/2025-04-07-ladies-nite-in-buffalo.njk
+++ b/src/challenges/2025-04-07-ladies-nite-in-buffalo.njk
@@ -13,9 +13,9 @@ bodyclass: challenge
 
 <section class="challenge challenge-entries">
 
-  <div class="entry">
+  <div class="entry entry-pf">
     <h3>Player 1: Pearl Fiasco</h3>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FDtZo2E63ao?si=mWnGo5Z4qA39mDXd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/FDtZo2E63ao?si=mWnGo5Z4qA39mDXd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>PF says:</h3>
     <blockquote>
 {% markdown %}
@@ -24,9 +24,9 @@ Eat 'em And Smile is probably my favourite Vai, and this is one of his best. I'v
     </blockquote>
   </div>
 
-  <div class="entry">
+  <div class="entry entry-cf">
     <h3>Player 2: Cussons Fiasco</h3>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/H00BW8Ad1FY?si=U1CCdLfCFzu2_yUJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/H00BW8Ad1FY?si=U1CCdLfCFzu2_yUJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h3>CF says:</h3>
     <blockquote>
 {% markdown %}
