--- a/src/assets/styles/_about.scss
+++ b/src/assets/styles/_about.scss
@@ -1,8 +1,21 @@
+/*
+hat-tip to Temani Afif, via CSS Tricks, for the image styling
+https: //css-tricks.com/fancy-image-decorations-single-element-magic/
+*/
+
 .about-img {
+	--s: 10px;
+	--gg: #000 1px, #0000 0 calc(100% - 1px), #000 0;
+	--ss: 50% / calc(100% - 2 * var(--s)) calc(100% - 2 * var(--s));
+
 	margin: 1rem auto;
 	max-width: 600px;
 	width: 100%;
-	border-radius: 2px;
+	padding: calc(3 * var(--s));
+	background: linear-gradient(var(--gg)) var(--ss) no-repeat,
+		linear-gradient(90deg, var(--gg)) var(--ss) no-repeat,
+		conic-gradient(from 90deg at 1px 1px, #0000 25%, #000 0) calc(2 * var(--s))
+			calc(2 * var(--s)) / calc(100% - 4 * var(--s)) calc(100% - 4 * var(--s));
 }
 
 p:has(.about-img) {
