--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/previously">Previously</a></li>
+    {# <li><a href="/previously">Previously</a></li> #}
     <li><a href="/about">About</a></li>
   </ul>
 </nav>
