--- a/src/index.njk
+++ b/src/index.njk
@@ -25,25 +25,20 @@ Satch's 1989 album **Flying in a Blue Dream** was his first which mixed instrume
 
 <section class="previous">
 {% markdown %}
-## Previous challenge
+## Previous challenges
 
 * April 2025: [Steve Vai's solo from "Ladies' Nite in Buffalo?" by David Lee Roth](/challenges/2025-04-07-ladies-nite-in-buffalo)
 
----{.dots}
+---{.spacer}
 
 Diamond Dave's debut solo album is laden with crackling guitar work supplied by none other than Steve Vai. Can the Brothers navigate one of the most melodic and memorable solos on the record?
-{% endmarkdown %}
-</section>
 
-{#
-<section class="previous">
-{% markdown %}
-## Previous challenge
+---{.dots}
 
 * March 2025: ["Circles" by Joe Satriani](/challenges/2025-03-27-circles)
 
----{.dots}
+---{.spacer}
 
 Can our heroes remember (or learn) how to play "Circles" by Joe Satriani all the way through? When one of them has a gammy finger and the other has a broken A/B box? Let's find out.
 {% endmarkdown %}
-</section> #}
+</section>
