--- a/src/index.njk
+++ b/src/index.njk
@@ -17,7 +17,7 @@ Welcome to **Guitar Challenges by the Fiasco Bros.**, where two long-standing gu
 
 * April 2025: [The solo section from "Strange" by Joe Satriani](/challenges/2025-04-14-strange)
 
----{.dots}
+---{.spacer}
 
 Satch's 1989 album **Flying in a Blue Dream** was his first which mixed instrumentals with vocal rock tracks, such as "Strange". Don't worry, the Brothers aren't going to be singing at you, but can they wrap their mitts around the solo section?
 {% endmarkdown %}
