--- a/src/challenges/2025-04-14-strange.njk
+++ b/src/challenges/2025-04-14-strange.njk
@@ -8,7 +8,7 @@ nocomments: true
 {% markdown %}
 ## April 2025: The solo section from "Strange" by Joe Satriani
 
-* **The challenge**: There are two solos stacked back-to-back in the middle of Satch's "[Strange](https://song.link/gb/i/407604565)". Our heroes must play each solo end-to-end with no stitching, but it **is** OK if they are from separate takes.
+* **The challenge**: There are two frenetic solos stacked back-to-back in the middle of Satriani's "[Strange](https://song.link/gb/i/407604565)". That's right, it's a back-to-back Satch-attack stack track, Jack. Our heroes must play each solo end-to-end with no stitching, but it **is** OK if they are from separate takes.
 {% endmarkdown %}
 </section>
 
