create placeholder page for next challenge

--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -133,6 +133,10 @@ blockquote {
 	li {
 		font-size: 1.25rem;
 	}
+
+	p:first-of-type::first-letter {
+		@include firstletter;
+	}
 }
 
 p.comments-credit {
