--- a/src/assets/styles/_challenge.scss
+++ b/src/assets/styles/_challenge.scss
@@ -35,14 +35,15 @@
 	}
 }
 
-iframe {
+iframe,
+.dummyIframe {
 	width: 100%;
 	aspect-ratio: 560 / 315;
 	border-radius: 3px;
-}
 
-iframe + h3 {
-	margin-top: 1em;
+	& + h3 {
+		margin-top: 1em;
+	}
 }
 
 .entry-awaiting {
