switch to SN fe tooling

--- a/src/assets/styles/meh/_form.scss
+++ b/src/assets/styles/meh/_form.scss
@@ -23,16 +23,16 @@ $formElementBg: #f0f0f0;
 		input[type="email"],
 		input[type="url"],
 		textarea {
-			font-family: Cormorant, serif;
+			font-family: "Cormorant", serif;
 			font-size: 1.25rem;
 		}
 
 		textarea {
-			font-family: MonaspaceXenon, monospace;
+			font-family: "MonaspaceXenon", monospace;
 		}
 
 		button {
-			font-family: Cormorant, serif;
+			font-family: "Cormorant", serif;
 			font-size: 1rem;
 			background-color: $formElementBg;
 
