--- a/src/assets/styles/partials/_challenge.scss
+++ b/src/assets/styles/partials/_challenge.scss
@@ -6,7 +6,7 @@
 	gap: 3rem;
 	justify-content: space-between;
 
-	@media (width >= 1000px) {
+	@media (min-width: 1000px) {
 		flex-direction: row;
 		gap: 1rem;
 	}
@@ -15,7 +15,7 @@
 .entry {
 	flex: 0 1 560px;
 
-	@media (width < 600px) {
+	@media (max-width: 599px) {
 		margin-inline: -10px;
 
 		& > *:not(iframe) {
@@ -28,7 +28,7 @@
 	margin-bottom: 0.25rem;
 }
 
-@media (width < 1000px) {
+@media (max-width: 999px) {
 	.entry + .entry {
 		border-top: 1px dotted #666;
 		padding-top: 2rem;
@@ -65,7 +65,7 @@ iframe,
 		font-variant-caps: small-caps;
 		font-size: 2rem;
 
-		@media (width >= 768px) {
+		@media (min-width: 768px) {
 			font-size: 3rem;
 		}
 	}
