--- a/src/assets/styles/partials/_fonts.scss
+++ b/src/assets/styles/partials/_fonts.scss
@@ -1,27 +1,27 @@
 // Cormorant
 @font-face {
-	font-family: Cormorant;
+	font-family: "Cormorant";
 	src: url("/public/fonts/Cormorant-Regular.woff2") format("woff2");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: Cormorant;
+	font-family: "Cormorant";
 	src: url("/public/fonts/Cormorant-Bold.woff2") format("woff2");
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: Cormorant;
+	font-family: "Cormorant";
 	src: url("/public/fonts/Cormorant-Italic.woff2") format("woff2");
 	font-weight: normal;
 	font-style: italic;
 }
 
 @font-face {
-	font-family: Cormorant;
+	font-family: "Cormorant";
 	src: url("/public/fonts/Cormorant-BoldItalic.woff2") format("woff2");
 	font-weight: bold;
 	font-style: italic;
@@ -29,7 +29,7 @@
 
 // Oswald
 @font-face {
-	font-family: OswaldLight;
+	font-family: "OswaldLight";
 	src: url("/public/fonts/Oswald-Light.woff2") format("woff2");
 	font-weight: normal;
 	font-style: normal;
@@ -37,7 +37,7 @@
 
 // Rye
 @font-face {
-	font-family: Rye;
+	font-family: "Rye";
 	src: url("/public/fonts/Rye-Regular.woff2") format("woff2");
 	font-weight: normal;
 	font-style: normal;
@@ -45,7 +45,7 @@
 
 // MonaspaceXenon
 @font-face {
-	font-family: MonaspaceXenon;
+	font-family: "MonaspaceXenon";
 	src: url("/public/fonts/MonaspaceXenonVarVF.woff2") format("woff2");
 	font-weight: normal;
 	font-style: normal;
