--- a/src/assets/styles/partials/_footer.scss
+++ b/src/assets/styles/partials/_footer.scss
@@ -3,7 +3,7 @@ footer p {
 	padding-bottom: 1rem;
 	padding-inline: 10px;
 
-	@media (width > 600px) {
+	@media (min-width: 600px) {
 		padding-inline: $side-padding;
 	}
 }
