--- a/src/assets/styles/partials/_global.scss
+++ b/src/assets/styles/partials/_global.scss
@@ -5,7 +5,7 @@
 	--meh-default-background: #f8f9fa;
 	--meh-default-foreground: #212529;
 	--meh-default-spacing: 1.2rem;
-	--meh-default-border-radius: 0px;
+	--meh-default-border-radius: 0;
 	--meh-default-success: green;
 	--meh-default-error: darkred;
 }
