--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,15 +1,15 @@
-@import "mixins";
-@import "global";
-@import "fonts";
-@import "layout";
-@import "typography";
-@import "lists";
-@import "header";
-@import "nav";
-@import "home";
-@import "about";
-@import "challenge";
-@import "footnotes";
-@import "footer";
-@import "links";
+@import "partials/mixins";
+@import "partials/global";
+@import "partials/fonts";
+@import "partials/layout";
+@import "partials/typography";
+@import "partials/lists";
+@import "partials/header";
+@import "partials/nav";
+@import "partials/home";
+@import "partials/about";
+@import "partials/challenge";
+@import "partials/footnotes";
+@import "partials/footer";
+@import "partials/links";
 @import "utils";
