--- a/src/assets/styles/partials/_footnotes.scss
+++ b/src/assets/styles/partials/_footnotes.scss
@@ -7,7 +7,7 @@ section.footnotes {
 	font-size: 1.2rem;
 	padding-inline: 10px;
 
-	@media (width > 600px) {
+	@media (min-width: 600px) {
 		padding-inline: $side-padding;
 	}
 
