--- a/src/assets/styles/partials/_mixins.scss
+++ b/src/assets/styles/partials/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin firstletter {
 	float: left;
 	font-size: 5.5rem;
-	font-family: Rye, serif;
+	font-family: "Rye", serif;
 	font-weight: normal;
 	margin: 0.15em 0.05em 0.1em 0;
 	line-height: 0.65;
