--- a/src/assets/styles/partials/_nav.scss
+++ b/src/assets/styles/partials/_nav.scss
@@ -13,7 +13,7 @@ nav {
 		gap: 1rem;
 		justify-content: flex-end;
 
-		@media (width > 600px) {
+		@media (min-width: 600px) {
 			margin-inline: $side-padding;
 		}
 
