--- a/src/assets/styles/partials/_about.scss
+++ b/src/assets/styles/partials/_about.scss
@@ -12,7 +12,8 @@ https: //css-tricks.com/fancy-image-decorations-single-element-magic/
 	max-width: 600px;
 	width: 100%;
 	padding: calc(3 * var(--s));
-	background: linear-gradient(var(--gg)) var(--ss) no-repeat,
+	background:
+		linear-gradient(var(--gg)) var(--ss) no-repeat,
 		linear-gradient(90deg, var(--gg)) var(--ss) no-repeat,
 		conic-gradient(from 90deg at 1px 1px, #0000 25%, #000 0) calc(2 * var(--s))
 			calc(2 * var(--s)) / calc(100% - 4 * var(--s)) calc(100% - 4 * var(--s));
