--- a/src/assets/styles/partials/_vars.scss
+++ b/src/assets/styles/partials/_vars.scss
@@ -2,9 +2,9 @@ $textcolour: #000;
 $linkcolour: #333;
 $bgcolour: #fafafa;
 $linecolour: #000;
-$main-font: Cormorant, serif;
+$main-font: CormorantInfant, serif;
 $headline-font: $main-font;
-$nav-font: OswaldLight, sans-serif;
+$nav-font: BarlowCondensed, sans-serif;
 $link-font: $nav-font;
 $spanfont: Rye, serif;
 $side-padding: 30px;
